--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "__MSG_appName__",
-    "version": "1.0.1",
+    "name": "__MSG_app_name__",
+    "version": "1.0.0",
     "manifest_version": 3,
-    "description": "__MSG_appDesc__",
+    "description": "__MSG_app_desc__",
     "default_locale": "ja",
-    "homepage_url": "https://github.com/hidao80/misskey-utils/",
+    "homepage_url": "https://github.com/hidao80/fast-logbook/",
     "icons": {
         "256": "img/icon_256.png"
     },
@@ -28,7 +28,7 @@
         }
     ],
     "action": {
-        "default_title": "__MSG_appName__",
+        "default_title": "__MSG_app_name__",
         "default_icon": "img/icon_256.png",
         "default_popup": "html/popup.html"
     },
