--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,4 +1,4 @@
-name: LaraStan
+name: eslint
 on:
   push:
 
@@ -11,7 +11,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: shivammathur/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           php-version: 16
 
