--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -32,4 +32,5 @@ jobs:
         with:
           files: js/**
 
-      - run: npx eslint ${{ steps.changed-files.outputs.all_changed_files }}
+#       - run: npx eslint ${{ steps.changed-files.outputs.all_changed_files }}
+       - run: npx eslint js/* js/lib/*
