--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -15,22 +15,22 @@ jobs:
         with:
           php-version: 16
 
-      #- uses: actions/cache@v3
-      #  id: node_modules_cache_id
-      #  env:
-      #    cache-name: cache-node-modules
-      #  with:
-      #    path: '**/node_modules'
-      #    key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+      - uses: actions/cache@v3
+        id: node_modules_cache_id
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
       - if: ${{ steps.node_modules_cache_id.outputs.cache-hit != 'true' }}
         run: npm i -D eslint eslint-plugin-jsonc@latest @typescript-eslint/parser @typescript-eslint/eslint-plugin
 
-      #- name: Get changed files
-      #  id: changed-files
-      #  uses: tj-actions/changed-files@v31
-      #  with:
-      #    files: js/**
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v31
+        with:
+          files: js/**
 
-      # - run: npx eslint ${{ steps.changed-files.outputs.all_changed_files }}
-      - run: npx eslint js/* js/lib/*
+      - run: npx eslint ${{ steps.changed-files.outputs.all_changed_files }}
+      # - run: npx eslint js/* js/lib/*
