--- a/manifest.json
+++ b/manifest.json
@@ -20,11 +20,17 @@
     },
     "commands": {
         "_execute_action": {
-            "suggested_key": "Alt+Shift+0",
+            "suggested_key": {
+                "default": "Shift+Alt+0",
+                "mac": "Shift+MacCtrl+0"
+            },
             "description": "__MSG_punch_description__"
         },
         "log_download": {
-            "suggested_key": "Alt+Shift+D",
+            "suggested_key": {
+                "default": "Shift+Alt+D",
+                "mac": "Shift+MacCtrl+D"
+            },
             "description": "__MSG_download_description__"
         }
     },
