--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,13 @@
                 "mac": "Shift+MacCtrl+D"
             },
             "description": "__MSG_download_description__"
+        },
+        "open_options": {
+            "suggested_key": {
+                "default": "Shift+Alt+O",
+                "mac": "Shift+MacCtrl+O"
+            },
+            "description": "__MSG_options_description__"
         }
     },
     "permissions": [
